# bevier

./: .gitignore  Cargo.toml  LICENSE  LICENSE.txt  README.md
assets/configs/: default.toml  performance.toml  size.toml
assets/empty_app/: Cargo.toml  _cargo_.toml
assets/empty_app/src/: main.rs
assets/simple_2d/: _cargo_.toml
assets/simple_2d/src/: main.rs
assets/simple_3d/: _cargo_.toml
assets/simple_3d/src/: main.rs
src/: create.rs  logging.rs  main.rs  new.rs  utils.rs
