[package]
name = "bevier"
version = "0.1.4"
edition = "2021"
license-file = "LICENSE.txt"
license = "MIT"
description = "A CLI Tool to generate Games using the Bevy Game Engine."
repository = "https://github.com/DraftedDev/bevier"
keywords = ["gamedev", "cli", "bevy", "game", "tool"]
categories = ["command-line-utilities", "game-development", "development-tools", "game-engines", "template-engine"]
exclude = [
    ".idea/*",
    "bevier.iml",
]

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
