[package]
name = "bevier"
version = "1.0.0"
edition = "2021"
license-file = "LICENSE"
description = "A CLI Tool to generate Games using the Bevy Game Engine."
repository = "https://github.com/DraftedDev/bevier"
keywords = ["gamedev", "cli", "bevy", "game", "tool"]
categories = ["command-line-utilities", "game-development", "development-tools", "game-engines", "template-engine"]
exclude = [
    ".idea/*",
    "bevier.iml",
]

[dependencies]
inquire = "0.6.2"
rayon = "1.7.0"
log = "0.4.20"
env_logger = "0.10.0"
include_dir = "0.7.3"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
