[package]
name = "bevier"
version = "1.1.1"
edition = "2021"
license = "MIT"
description = "An interactive CLI to generate Games using the Bevy Game Engine."
repository = "https://github.com/DraftedDev/bevier"
keywords = ["gamedev", "cli", "bevy", "generate"]
categories = ["command-line-utilities", "game-development", "development-tools"]

[[bin]]
name = "bevier"
path = "src/main.rs"

[dependencies]
inquire = "0.6.2"
rayon = "1.7.0"
log = "0.4.20"
env_logger = "0.10.0"
include_dir = "0.7.3"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
