[package]
name = "empty_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Add other dependencies here

[dependencies.bevy]
version = "0.11"
# Disable default features for better customization.
default-features = false
features = [
    # Enable/Disable the features you want to use.

    # Bevy functionality:
    "multi-threaded",     # Run with multithreading
    "bevy_asset",         # Assets management
    "bevy_audio",         # Builtin audio
    # "bevy_gilrs",       # Gamepad input support
    "bevy_scene",         # Scenes management
    "bevy_winit",         # Window management
    "bevy_render",        # Rendering framework core
    "bevy_core_pipeline", # Common rendering abstractions
    "bevy_gizmos",        # Support drawing debug lines and shapes
    "bevy_sprite",        # 2D (sprites) rendering
    "bevy_pbr",           # 3D (physically-based) rendering
    "bevy_gltf",          # GLTF 3D assets format support
    "bevy_text",          # Text/font rendering
    "bevy_ui",            # UI toolkit
    "animation",          # Animation support
    "tonemapping_luts",   # Support different camera Tonemapping modes (embeds extra data)
    "filesystem_watcher", # Asset hot-reloading
    "default_font",       # Embed a minimal default font for text/UI

    # File formats:
    "png",                   # PNG image format for simple 2D images
    # "hdr",                 # HDR images
    "ktx2",                  # Preferred format for GPU textures
    "zstd",                  # ZSTD compression support in KTX2 files
    "vorbis",                # Audio: OGG Vorbis
    "subpixel_glyph_atlas",  # Subpixel antialiasing for text/fonts
    "serialize",             # Support for `serde` Serialize/Deserialize
    # "dds",                 # Alternative DirectX format for GPU textures, instead of KTX2
    "jpeg",                  # JPEG lossy format for 2D photos
    # "webp",                # WebP image format
    # "bmp",                 # Uncompressed BMP image format
    # "tga",                 # Truevision Targa image format
    # "exr",                 # OpenEXR advanced image format
    # "pnm",                 # PNM (pam, pbm, pgm, ppm) image format
    # "basis-universal",     # Basis Universal GPU texture compression format
    "zlib",                  # zlib compression support in KTX2 files
    # "flac",                # Audio: FLAC lossless format
    "mp3",                   # Audio: MP3 format (not recommended)
    "wav",                   # Audio: Uncompressed WAV
    # "symphonia-all",       # All Audio formats supported by the Symphonia library
    # "shader_format_glsl",  # GLSL shader support
    # "shader_format_spirv", # SPIR-V shader support

    # Platform-specific:
    "x11",                     # Linux: Support X11 windowing system
    # "android_shared_stdcxx", # Android: use shared C++ library
    # "webgl2",                # Use WebGL2 on the web instead of WGPU (not recommended)
    "wayland",                 # (Linux) Support Wayland windowing system
    # "accesskit_unix",        # (Unix-like) AccessKit integration for UI Accessibility
    # "bevy_dynamic_plugin",   # (Desktop) support for loading of `DynamicPlugin`s

    # Development/Debug features:
    # "dynamic_linking",    # Dynamic linking for faster compile-times (don't use in production)
    # "trace",              # Enable tracing for performance measurement
    # "detailed_trace",     # Make traces more verbose
    # "trace_tracy",        # Tracing using `tracy`
    # "trace_tracy_memory", # + memory profiling
    # "trace_chrome",       # Tracing using the Chrome format
    # "wgpu_trace",         # WGPU/rendering tracing
]